shows password does not match error message

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -4,6 +4,10 @@
     Welcome, <%= current_user.email %>
   <% end %>
 
+  <% if flash[:notice] %>
+    <%= flash[:notice] %>
+  <% end %>
+
   <%= yield %>
 
 </body>
