refactored and run rubo cop

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -3,10 +3,13 @@
   <% if current_user %>
     Welcome, <%= current_user.email %>
   <% end %>
-
-  <% if flash[:notice] %>
-    <%= flash[:notice] %>
+  <ul>
+  <% if flash[:errors] %>
+    <% flash[:errors].each do |error| %>
+      <li><%= error %></li>
+    <% end %>
   <% end %>
+  </ul>
 
   <%= yield %>
 
