--- a/app/views/sign_in.erb
+++ b/app/views/sign_in.erb
@@ -1,3 +1,5 @@
+Please Sign up:
+
 <form action='/users' method='post'>
   Email: <input name='email' type='text' value='<%= @user.email %>'>
   Password: <input name='password' type='password'>
