--- a/app/views/sign_in.erb
+++ b/app/views/sign_in.erb
@@ -1,8 +1,7 @@
-Please Sign up:
+Please Sign in:
 
-<form action='/users' method='post'>
-  Email: <input name='email' type='text' value='<%= @user.email %>'>
+<form action='/sessions' method='post'>
+  Email: <input name='email' type='text'>
   Password: <input name='password' type='password'>
-  Password Confirmation: <input name='password_confirmation' type='password'>
-  <input type='submit' value='Sign up'>
+  <input type='submit' value='Sign in'>
 </form>
