--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -2,12 +2,19 @@
 
   <% if current_user %>
     Welcome, <%= current_user.email %>
+    <form method='post' action='/sessions'>
+      <input type='hidden' name='_method' value='delete'>
+      <input type='submit' value='Sign out'>
+    </form>
   <% end %>
   <ul>
   <% if flash[:errors] %>
     <% flash[:errors].each do |error| %>
       <li><%= error %></li>
     <% end %>
+  <% end %>
+  <% if flash[:notice] %>
+    <%= flash[:notice] %>
   <% end %>
   </ul>
 
