--- a/app/views/sign_in.erb
+++ b/app/views/sign_in.erb
@@ -1,7 +1,13 @@
 Please Sign in:
 
 <form action='/sessions' method='post'>
-  Email: <input name='email' type='text'>
-  Password: <input name='password' type='password'>
+  Email: 
+  <br>
+  <input name='email' type='text'>
+  <br>
+  Password: 
+  <br>
+  <input name='password' type='password'>
+  <br>
   <input type='submit' value='Sign in'>
 </form>
