--- a/app/views/chat.erb
+++ b/app/views/chat.erb
@@ -1,34 +1,20 @@
+<!doctype html>
 <html>
+
+  <head>
+    <link rel="stylesheet" type="text/css" href="/css/chat.css">
+  </head>
+
   <body>
-     <h1>Simple Echo & Chat Server</h1>
-     <form id="form">
-       <input type="text" id="input" value="send a message"></input>
-     </form>
-     <div id="msgs"></div>
+
+    <ul id='messages'></ul>
+    <section id='userText'>
+      <input id='m' autocomplete='off'/>
+      <button id='textSubmit'>Send</button>
+    </section>
   </body>
 
-  <script type="text/javascript">
-    window.onload = function(){
-      (function(){
-        var show = function(el){
-          return function(msg){ el.innerHTML = msg + '<br />' + el.innerHTML; }
-        }(document.getElementById('msgs'));
+  <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
+  <script type="text/javascript" src='/javascript/chat.js'></script>
 
-        var ws       = new WebSocket('ws://' + window.location.host + window.location.pathname);
-        ws.onopen    = function()  { show('websocket opened'); };
-        ws.onclose   = function()  { show('websocket closed'); }
-        ws.onmessage = function(m) { show('websocket message: ' +  m.data); };
-
-        var sender = function(f){
-          var input     = document.getElementById('input');
-          input.onclick = function(){ input.value = "" };
-          f.onsubmit    = function(){
-            ws.send(input.value);
-            input.value = "send a message";
-            return false;
-          }
-        }(document.getElementById('form'));
-      })();
-    }
-  </script>
 </html>
