--- a/app/views/sign_in.erb
+++ b/app/views/sign_in.erb
@@ -1,13 +1,21 @@
-Please Sign in:
+<head>
+  <link rel="stylesheet" href="/css/index.css" type="text/css">
+</head>
 
-<form action='/sessions' method='post'>
-  Email: 
-  <br>
-  <input name='email' type='text'>
-  <br>
-  Password: 
-  <br>
-  <input name='password' type='password'>
-  <br>
-  <input type='submit' value='Sign in'>
-</form>
+<body>
+
+  Please Sign in:
+
+  <form action='/sessions' method='post'>
+    Email: 
+    <br>
+    <input name='email' type='text'>
+    <br>
+    Password: 
+    <br>
+    <input name='password' type='password'>
+    <br>
+    <input type='submit' value='Sign in'>
+  </form>
+  
+</body>
