--- a/app/views/sign_up.erb
+++ b/app/views/sign_up.erb
@@ -1,19 +1,32 @@
-<header><b>Please Sign up:</b></header>
+<head>
+  <link rel="stylesheet" href="/css/index.css" type="text/css">
+</head>
 
-<container class='form-container'>
-  <form action='/users' method='post'>
-    Email: 
-    <br>
-    <input name='email' type='text' value='<%= @user.email %>'>
-    <br>
-    Password: 
-    <br>
-    <input name='password' type='password'>
-    <br>
-    Password Confirmation: 
-    <br>
-    <input name='password_confirmation' type='password'>
-    <br>
-    <input type='submit' value='Sign up' id='submit-button'>
-  </form>
-</container>
+<body>
+    
+    <header><b>Please Sign up:</b></header>
+
+    <container class='form-container'>
+      <form action='/users' method='post'>
+        Email: 
+        <br>
+        <input name='email' type='text' value='<%= @user.email %>'>
+        <br>
+        Name: 
+        <br>
+        <input name='name' type='text'>
+        <br>
+        Password: 
+        <br>
+        <input name='password' type='password'>
+        <br>
+        Password Confirmation: 
+        <br>
+        <input name='password_confirmation' type='password'>
+        <br>
+        <input type='submit' value='Sign up' id='submit-button'>
+      </form>
+    </container>
+    
+</body>
+
