user joins and leaves room

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -11,6 +11,8 @@
       <a href='sessions/new' class='not-signed-in-buttons'>Sign in</a>
     </container>
 
+  <% else %>
+    Welcome, <%= current_user.name %>
   <% end %>
   
 </body>
