--- a/app/views/chat.erb
+++ b/app/views/chat.erb
@@ -7,7 +7,9 @@
 
   <body>
 
-    <ul id='messages'></ul>
+    <ul id='messages'>
+      
+    </ul>
     <section id='userText'>
       <input id='m' autocomplete='off'/>
       <button id='textSubmit'>Send</button>
